// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kbd snapshots > matches snapshot — group 1`] = `
<kbd
  class="inline-flex items-center gap-1"
  data-slot="kbd-group"
>
  <kbd
    class="bg-kbd-surface text-kbd-foreground pointer-events-none inline-flex h-5 w-fit min-w-5 select-none items-center justify-center gap-1 rounded-sm px-1 font-sans text-xs font-medium [&_svg:not([class*='size-'])]:size-3 [[data-slot=tooltip-content]_&]:bg-kbd-on-overlay-foreground/15 [[data-slot=tooltip-content]_&]:text-kbd-on-overlay-foreground"
    data-slot="kbd"
  >
    Ctrl
  </kbd>
  <kbd
    class="bg-kbd-surface text-kbd-foreground pointer-events-none inline-flex h-5 w-fit min-w-5 select-none items-center justify-center gap-1 rounded-sm px-1 font-sans text-xs font-medium [&_svg:not([class*='size-'])]:size-3 [[data-slot=tooltip-content]_&]:bg-kbd-on-overlay-foreground/15 [[data-slot=tooltip-content]_&]:text-kbd-on-overlay-foreground"
    data-slot="kbd"
  >
    K
  </kbd>
</kbd>
`;

exports[`Kbd snapshots > matches snapshot — single key 1`] = `
<kbd
  class="bg-kbd-surface text-kbd-foreground pointer-events-none inline-flex h-5 w-fit min-w-5 select-none items-center justify-center gap-1 rounded-sm px-1 font-sans text-xs font-medium [&_svg:not([class*='size-'])]:size-3 [[data-slot=tooltip-content]_&]:bg-kbd-on-overlay-foreground/15 [[data-slot=tooltip-content]_&]:text-kbd-on-overlay-foreground"
  data-slot="kbd"
>
  Ctrl
</kbd>
`;
